--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">The Movie DB</string>
+    <string name="title_welcome">Добро пожаловать!</string>
+    <string name="title_login_hint">Укажите логин и пароль, которые вы использовали для входа</string>
+    <string name="title_input_hint_login">Логин</string>
+    <string name="title_input_hint_password">Пароль</string>
+    <string name="title_sign_in">Войти</string>
 </resources>
