--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">The Movie DB</string>
+    <string name="title_movies">Фильмы</string>
+    <string name="title_favorites">Избранное</string>
+    <string name="title_profile">Профиль</string>
 </resources>
