Обновить заглушку в fragment_search и использовать её в activty_main

--- a/features/movies/src/main/res/values/strings.xml
+++ b/features/movies/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="title_movies_search">Поиск фильмов</string>
     <string name="title_time">Время</string>
     <string name="title_rating">Рейтинг фильма</string>
+    <string name="title_search_any_movie">Найдем любой\nфильм на ваш\nвкус</string>
 </resources>
