--- a/core/network/src/main/res/values/strings.xml
+++ b/core/network/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="title_no_network">Нет подключение к интернету</string>
     <string name="title_check_network_connection">Проверьте подключение к интернету</string>
+    <string name="title_status_exception_cause">404 Not Found</string>
 </resources>
