--- a/features/movies/src/main/res/values/strings.xml
+++ b/features/movies/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_favorite">Избранное</string>
     <string name="title_favorite_empty">Вы не добавили ни одного фильма</string>
     <string name="title_favorite_search">Найти любимые фильмы</string>
+    <string name="title_movie_with_year">%1$s (%2$s)</string>
 </resources>
