--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="untrusted_environment">Внимание! Не доверенное окружение:</string>
-    <string name="untrusted_environment_root">Вы используете root устройство</string>
-    <string name="untrusted_environment_wifi">Вы используете ненадежное wi-fi соединение</string>
+    <string name="untrusted_environment">Внимание! Не доверенное окружение:\n</string>
+    <string name="untrusted_environment_reason">Разрешите, чтобы проверить wi-fi соединение на надежность</string>
+    <string name="untrusted_device_root">Вы используете root устройство</string>
+    <string name="untrusted_wifi">Вы используете ненадежное wi-fi соединение</string>
     <string name="title_sing_out">Выйти</string>
     <string name="user_avatar_description">Аватар профиля</string>
 </resources>
